gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/test21204.d
version https://git-lfs.github.com/spec/v1
oid sha256:79e5412a7c1a0eb778afaf81406fae7b9d150f1d144632bd4d37f7460424a976
size 338
